<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/barras" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/titlelogin"
            android:textColor="@color/rosa_200"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/ventacomercial" />

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:buttonTint="@color/rosa_200"
            android:ems="10"
            android:hint="@string/emailaddress"
            android:inputType="text|textEmailAddress"
            android:maxLines="2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="46dp"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_edittext"
            android:buttonTint="@color/rosa_200"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="2" />

        <TextView
            android:id="@+id/errorauthtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="Nombre de Usuario o Contraseña Incorrecta."
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿Olvidaste la contraseña?"
                android:textColor="@color/rosa_200" />

            <CheckBox
                android:id="@+id/rememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rosa_200"
                android:buttonTint="@color/rosa_200"
                android:text="@string/rememberme" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/rosa_200"
            android:onClick="Login"
            android:text="Entrar" />

        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="Sign in with Google"
            android:textAllCaps="false"
            android:textStyle="bold" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="2022 -  Ventas - Derechos reservados"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/barras" />

</androidx.constraintlayout.widget.ConstraintLayout>